# aoc2023

./: Cargo.toml
day01/src/: main.rs
day02/: main.rs
src/: main.rs
