[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = { version = "2.0.4", features = [] }
regex = "1.10.2"
itertools = "0.12.0"
rayon = "1.8.0"
time = { version = "0.3.30", features = [] }
num = { version = "0.4.1", features = [] }
nom = "7.1.3"
